--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  zoom_widget: ^0.1.3
+  provider: ^3.0.0+1
   vector_math: ^2.0.8
-  matrix_gesture_detector: ^0.1.0
   flutter:
     sdk: flutter
 
